# py-elemental

./: .gitignore  LICENSE  README.md  db.sqlite3  manage.py  pyproject.toml  test.html  tests.py
bot/: __main__.py  models.py
bot/migrations/: 0001_initial.py  0002_discorduser_has_elements.py  0003_discorduser_last_recipe.py  0004_auto_20201202_2207.py
element/: message_handlers.py  models.py  views.py
element/migrations/: 0001_initial.py  0002_auto_20200830_1306.py  0002_auto_20200907_2136.py  0003_newelementsuggestion_voters.py  0004_auto_20200908_2242.py  0005_auto_20200922_2034.py  0006_auto_20200922_2036.py  0007_auto_20200922_2037.py  0008_suggestion_suggestion_type.py  0009_auto_20201021_1713.py  0010_auto_20201021_2002.py  0011_suggestion_suggestion_type.py  0012_auto_20201202_2143.py  0013_auto_20201202_2207.py  0014_auto_20201202_2226.py
py_elemental/: asgi.py  settings.py  urls.py  wsgi.py
static/scripts/: game_canvas_generation.js  game_combination.js  game_contextmenu.js  game_drag_drop.js  game_element_creation.js  game_element_list.js  game_initialize.js  game_message_handlers.js  game_ready.js  game_save.js  game_socket.js  game_suggestion_list.js  game_tabs.js  game_util.js  lib_color_picker.js
static/stylesheets/: game_main.css
templates/: index.html
tools/: make_basic_elements.py  reset_suggestions.py  test.py
