[tool.poetry]
name = "repl_python3_ElectricForcefulInstructions"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
dwebsocket = "^0.5.12"
django-extensions = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
